package NYT.NTransactionClient.NProto;

import "yt/core/misc/guid.proto";
import "yt/core/ytree/attributes.proto";

////////////////////////////////////////////////////////////////////////////////

message TReqStartTransaction
{
    optional NYT.NYTree.NProto.TAttributes attributes = 1;
    optional NYT.NProto.TGuid hint_id = 2;
    optional NYT.NProto.TGuid parent_id = 3;
    required int32 timeout = 4;
}

message TRspStartTransaction
{
    required NYT.NProto.TGuid id = 1;
}

////////////////////////////////////////////////////////////////////////////////
